fixed sync button alignment

--- a/client/sass/app/_topbar.scss
+++ b/client/sass/app/_topbar.scss
@@ -39,7 +39,7 @@
             outline: none;
             box-shadow: 0 0 0.25rem 0.125rem $coral;
         }
-        
+
     }
 
     &__button {
@@ -64,7 +64,7 @@
         }
 
         &--sync {
-            right: 4.5rem; // 8rem;
+            right: 8rem;
 
             &.spin {
                 -webkit-animation-name: spin;
@@ -81,7 +81,7 @@
                 -ms-animation-timing-function: linear;
                 -o-transition: rotate(360deg);
             }
-            
+
         }
 
         &--help {
